# gpio2mqtt

./: .gitignore  Cargo.toml  README.md  build.sh  move-detect.sh
etc/: gpio2mqtt.yaml.sample
etc/systemd/system/: gpio2mqtt.service
src/: .main.rs.swp  main.rs
